# graphark

./: CMakeLists.txt  README.md
lib/graphark/include/: camera.h  drawable.h  drawable2d.h  drawable_elements.h  error.h  function_evaluator.h  program.h
lib/graphark/src/: drawable_elements.cpp
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
